--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
-{
-    "name": "My First Extension",
-    "version": "1.0",
-    "manifest_version": 2,
-    
-    "background": {
-        "scripts": ["helloworld.js"]
-    },
-    "browser_action": {}
+ {
+  "manifest_version": 2,
+
+  "name": "Hatch",
+  "description": "Friendly pet accompanying a to-do list",
+  "version": "1.0",
+
+  "browser_action": {
+   "default_icon": "icon.png",
+   "default_popup": "popup.html"
+  },
+  "permissions": [
+   "activeTab"
+   "storage"
+   ]
 }
