--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,18 @@
 {
-  "name": "Basic Chrome extension",
-  "description": "Print inside console when clicked",
-  "version": "2.0",
+  "name": "Hatch",
+  "description": "Friendly pet accompanying a to-do list",
+  "version": "1.0",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["js/background.js"],
     "persistent": false
   },
   "browser_action": {
-    "default_title": "Print inside console when clicked"
+   "default_icon": "icon.png",
+   "default_popup": "popup.html"
   },
   "manifest_version": 2
 }
