--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,11 @@
     "storage"
   ],
   "background": {
-    "scripts": ["js/background.js"],
+    "scripts": ["background.js"],
     "persistent": false
   },
   "browser_action": {
+   "default_title": "Print inside console when clicked",
    "default_icon": "icon.png",
    "default_popup": "popup.html"
   },
